--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,13 @@
     "mongodb": "^6.9.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.6"
+    "eslint": "^9.11.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "nodemon": "^3.1.6",
+    "prettier": "^3.3.3"
   }
 }
